Patched bug with safari not being able to parse the ISO dates (requires T deliminter). Took container offset into account for the mouse position

--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
 
       .hero-container {
         width: 90vw;
-        height: 90vh;
+        height: 60vh;
         margin: 5vh 5vw;
       }
     </style>
   </head>
   <body>
+    <div style="height: 300px;">Hi</div>
     <div id="hero" class="hero-container"></div>
     <script src="src/index.js"></script>
     <script>
