Fixed xrange bounds for the tooltip

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <div style="height: 300px;">Hi</div>
-    <div id="hero" class="hero-container"></div>
+    <div id="hero" class="hero-container" style="width: 800px; margin: 0 auto;"></div>
     <script src="src/index.js"></script>
     <script>
       CESHero(document.getElementById('hero'))
